--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
 
     display: grid;
-    grid-template-columns: 0.2fr auto;
+    grid-template-columns: 0.3fr auto;
     grid-template-rows: auto 1fr;
     grid-template-areas: 'header header'
                          'nav main'
@@ -39,6 +39,10 @@ h1, li {
     margin-bottom: 1rem;
 }
 
+h1 {
+    font-weight: bold;
+}
+
 .projects h1 {
     font-size: 1.5rem;
     font-weight: bold;
@@ -54,6 +58,19 @@ main {
 
 .content {
     text-align: center;
+    width: 50%;
+    margin: 1rem auto;
+}
+
+.taskContainer {
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.taskContainer div {
+    margin-left: auto;
+    display: flex;
+    gap: 1rem;
 }
 
 
